Fix: Top story layout on mobile

--- a/CSS-Grids/Huff-Post/layout.css
+++ b/CSS-Grids/Huff-Post/layout.css
@@ -132,7 +132,62 @@ body {
         grid-row: 8 / 14;
         grid-column: 1 / -1;
     }
-
+    .top-title-box {
+        padding: 1em;
+        background-color: #ffffff;
+    }
+    .top-title-flag {
+        font-style: italic;
+        background: #F83371;
+        color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 2em;
+    }
+    .top-title-flag h1 {
+        padding: 0 15px;
+        font-size: 1.0625rem;
+        font-family: "ProximaNovaBold", Arial, Geneva, sans-serif;
+        letter-spacing: 0.12em;
+        padding-top: 3px;
+    }
+    .tp-main-card-img {
+        max-width: 96px;
+        height: 96px;
+        justify-content: flex-start;
+    }
+    .tp-main-card-details {
+        border-bottom: none;
+    }
+    .tp-main-card-link:hover {
+        text-decoration: underline;
+    }
+    .tp-main-card-text {
+        /* font-family: "ProximaNovaLight", Arial, Geneva, sans-serif; */
+        margin-bottom: 1em;
+    }
+    .tp-small-cards-wrapper {
+        padding: 0 0 0.5em 0;
+    }
+    .tp-small-card-img {
+        margin-bottom: 1em;
+    }
+    .tp-main-card,
+    .tp-small-card {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 0.8px solid #b6b6b6;
+        margin: 1em;
+    }
+    .tp-small-card-link:hover {
+        text-decoration: underline;
+    }
+    .tp-main-card-details,
+    .tp-small-card-details {
+        padding: 0 0.8em;
+    }
+/* ------------------------------ */
     /* Section Two - Center */
     .sec-2-center {
         grid-row: 14 / 16;
